# bread

./: Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: usage-terminalizer.yml
src/: ascii.rs  base.rs  binary.rs  byte_writer.rs  config.rs  error.rs  hexadecimal.rs  lib.rs  main.rs  raw.rs  util.rs
