[package]
name = "bread-cli"
version = "2.0.0"
edition = "2021"
description = "byte conversion tool"
license = "GPL-3.0-or-later"
homepage = "https://github.com/biagang/bread"
repository = "https://github.com/biagang/bread"
readme = "README.md"
keywords = ["hex", "converter", "byte", "ascii", "binary"]
categories = ["command-line-utilities", "encoding"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive", "cargo"] }

[features]
benchmark = []
